cmake_minimum_required(VERSION 3.1)
project(NetworkUtility C CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 99)

# Put the libaries and binaries that get built into directories at the
# top of the build tree rather than in hard-to-find leaf directories.
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

include_directories(${PROJECT_SOURCE_DIR})

# check epoll and add config.h for the macro compilation
include(CheckSymbolExists)
check_symbol_exists(epoll_create "sys/epoll.h" EPOLL_EXISTS)
if (EPOLL_EXISTS)
    # Linux下设置为epoll
    set(EPOLL_ENABLE 1 CACHE INTERNAL "enable epoll")

    # Linux下也设置为poll
#    set(EPOLL_ENABLE "" CACHE INTERNAL "not enable epoll")
else ()
    set(EPOLL_ENABLE "" CACHE INTERNAL "not enable epoll")
endif ()

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake
        ${CMAKE_CURRENT_BINARY_DIR}/include/config.h)

include_directories(${CMAKE_CURRENT_BINARY_DIR}/include)

add_subdirectory(lib)
add_subdirectory(04_make_socket)
add_subdirectory(05_tcp)
add_subdirectory(06_udp)
add_subdirectory(07_unix)
add_subdirectory(11_grace)
add_subdirectory(12_ping)
add_subdirectory(13_batchwrite)
add_subdirectory(14_udpconnect)
add_subdirectory(15_addressused)
add_subdirectory(16_stream)
add_subdirectory(17_reliable)
add_subdirectory(18_samplebuffer)
add_subdirectory(20_select)
add_subdirectory(21_poll)
add_subdirectory(22_nonblocking)
add_subdirectory(23_epoll)
add_subdirectory(25_fork)
add_subdirectory(26_thread)
add_subdirectory(27_poll-server-onethread)
add_subdirectory(28_poll-server-multithreads)
add_subdirectory(29_epoll-server-multithreads)
add_subdirectory(30_aio01)
add_subdirectory(34_http_server)
add_subdirectory(project-telnet)

